# yc-agentmail

./: GROUP_CHAT_TOOLS_README.md  PERPLEXITY_QUICKSTART.md  PERPLEXITY_SETUP_COMPLETE.md  TEST_E2E_README.md  agent.py  agent_browser.py  agent_service.py  cfg.py  clients.py  env.example  example_requests.sh  expedia_prebuilt_actions.py  group_chat_agent.db  main.py  prompts.py  pyproject.toml  register_webhook.py  run_e2e_test.sh  test_api_expedia_booking.py  test_api_plan_booking.py  test_e2e_group_chat_booking.py  test_expedia_agent_only.py  test_expedia_booking_api.py  test_flight_tools_direct.py  test_group_chat_agent.db  test_group_chat_tools.py  test_inbox_attributes.py  test_inbox_threads.py
api/: PERPLEXITY_INTEGRATION_GUIDE.md  PERPLEXITY_TOOLS_README.md  __init__.py  agent.py  agent_service.py  agentmail_helper.py  cfg.py  clients.py  example_perplexity_usage.py  perplexity_tools.py  test_perplexity_tools.py  tools.py
api/expedia_agent/: INBOX_TOOL_README.md  README.md  __init__.py  agent_browser.py  expedia_agent_tools.py  expedia_flight_tools.py  expedia_hotel_prebuilt_actions.py  expedia_prebuilt_actions.py  test_api_plan_booking.py  test_flight_tools_direct.py  test_hotel_tools_direct.py  test_inbox_tool.py  test_prebuilt_actions.py
api/group_chat/: README.md  __init__.py  api.py  database.py  example.py  models.py  orchestrator.py
group_chat_agent/: api.py  database.py  models.py  orchestrator.py
threejs-orb/: index.html  package-lock.json  package.json
