[project]
name = "yc-agentmail"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agentmail>=0.1.3",
    "fastapi>=0.120.4",
    "hyperspell>=0.26.0",
    "langchain>=1.0.3",
    "langgraph>=1.0.2",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
]
